--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
             <li>
                 <form class="button-form" action="tester.html" method="get">
-                    <button class="btn-style nav-link">BREAKDOWN<span class="sr-only"></span></button>
+                    <button class="btn-style nav-link">Breakdown<span class="sr-only"></span></button>
                 </form>
             </li>
         </ul>
@@ -302,348 +302,20 @@
                         </tbody>
                     </table>
                 </div>
-                <!-- Bar Chart -->
-
-                <!-- <div>
-
-                    <div class="chart-box" id="container"></div>
-
-                </div> -->
 
                 <div class="chart-js-trial-main">
                     <canvas id="myChartmain" style="background-color: rgb(255, 255, 255);" options="options"></canvas>
                 </div>
 
-
-
-
-                <!-- SVG PIE CHART 
-
-                <div>
-
-                    <?xml version="1.0" encoding="utf-8"?>
-                    <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -
-                    <svg class="dub-seats-pie" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1900 1900"
-                        style="enable-background:new 0 0 800 800;" xml:space="preserve">
-                        <style type="text/css">
-                            .st0 {
-                                clip-path: url(#SVGID_2_);
-                            }
-
-                            .st1 {
-                                fill: #1F6B0F;
-                            }
-
-                            .st2 {
-                                fill: #143ED7;
-                            }
-
-                            .st3 {
-                                fill: #94DD5F;
-                            }
-
-                            .st4 {
-                                fill: #3BCC38;
-                            }
-
-                            .st5 {
-                                fill: #803A23;
-                            }
-
-                            .st6 {
-                                fill: #7E1DBF;
-                            }
-
-                            .st7 {
-                                fill: #FF0000;
-                            }
-
-                            .st8 {
-                                fill: #FF99F7;
-                            }
-
-                            .st9 {
-                                clip-path: url(#SVGID_4_);
-                            }
-
-                            .st10 {
-                                font-family: 'SourceSansPro-Semibold';
-                            }
-
-                            .st11 {
-                                font-size: 22.3226px;
-                            }
-
-                            .st12 {
-                                fill: none;
-                                stroke: #1F6B0F;
-                                stroke-width: 5.184;
-                            }
-
-                            .st13 {
-                                fill: #FFFFFF;
-                            }
-
-                            .st14 {
-                                fill: none;
-                                stroke: #143ED7;
-                                stroke-width: 5.184;
-                            }
-
-                            .st15 {
-                                fill: none;
-                                stroke: #94DD5F;
-                                stroke-width: 5.184;
-                            }
-
-                            .st16 {
-                                fill: none;
-                                stroke: #3BCC38;
-                                stroke-width: 5.184;
-                            }
-
-                            .st17 {
-                                fill: none;
-                                stroke: #803A23;
-                                stroke-width: 5.184;
-                            }
-
-                            .st18 {
-                                fill: none;
-                                stroke: #7E1DBF;
-                                stroke-width: 5.184;
-                            }
-
-                            .st19 {
-                                fill: none;
-                                stroke: #FF0000;
-                                stroke-width: 5.184;
-                            }
-
-                            .st20 {
-                                fill: none;
-                                stroke: #FF99F7;
-                                stroke-width: 5.184;
-                            }
-                        </style>
-                        <g id="data-points">
-                            <g>
-                                <defs>
-                                    <rect id="SVGID_1_" x="37.35" width="725.4" height="800" />
-                                </defs>
-                                <clipPath id="SVGID_2_">
-                                    <use xlink:href="#SVGID_1_" style="overflow:visible;" />
-                                </clipPath>
-                                <g transform="translate(0,0)" class="st0">
-                                    <path id="point-0-0" class="st1"
-                                        d="M61.44,338.77C90.96,175.56,232.69,56.63,398.55,55.91l1.5,344.09L61.44,338.77z" />
-                                    <path id="point-0-1" class="st2"
-                                        d="M686.15,208.83c92.14,137.9,72.8,321.92-46,437.65L400.05,400L686.15,208.83z" />
-                                    <path id="point-0-2" class="st3"
-                                        d="M638,648.56c-94.25,90.23-231.42,119.38-354.22,75.29L400.05,400L638,648.56z" />
-                                    <path id="point-0-3" class="st4"
-                                        d="M401.55,55.91c113.33,0.49,219.14,56.76,282.93,150.43L400.05,400L401.55,55.91z" />
-                                    <path id="point-0-4" class="st5"
-                                        d="M159.94,646.48c-45.46-44.28-77.78-100.27-93.4-161.78L400.05,400L159.94,646.48z" />
-                                    <path id="point-0-5" class="st6"
-                                        d="M65.81,481.79c-11.22-45.86-12.89-93.53-4.89-140.06L400.05,400L65.81,481.79z" />
-                                    <path id="point-0-6" class="st7"
-                                        d="M237.18,703.11c-27.38-14.71-52.63-33.06-75.08-54.55L400.05,400L237.18,703.11z" />
-                                    <path id="point-0-7" class="st8"
-                                        d="M280.95,722.83c-14.09-5.2-27.83-11.31-41.12-18.31L400.05,400L280.95,722.83z" />
-                                </g>
-                            </g>
-                        </g>
-                        <g id="data-point-labels">
-                            <g>
-                                <defs>
-                                    <rect id="SVGID_3_" x="37.35" width="725.4" height="800" />
-                                </defs>
-                                <clipPath id="SVGID_4_">
-                                    <use xlink:href="#SVGID_3_" style="overflow:visible;" />
-                                </clipPath>
-                                <g transform="translate(0,0)" class="st9">
-                                    <g transform="translate(180.7584228515625, 193.21701049804688)"
-                                        pointer-events="none">
-                                        <text transform="matrix(1 0 0 1 96.9242 74.9856)" class="st10 st11">SF</text>
-                                        <text transform="matrix(1 0 0 1 96.9242 74.9856)"
-                                            class="st12 st10 st11">SF</text>
-                                        <text transform="matrix(1 0 0 1 97.2474 98.4236)" class="st10 st11">10</text>
-                                        <text transform="matrix(1 0 0 1 97.2474 98.4236)"
-                                            class="st12 st10 st11">10</text>
-                                        <text transform="matrix(1 0 0 1 96.9242 74.9856)"
-                                            class="st13 st10 st11">SF</text>
-                                        <text transform="matrix(1 0 0 1 97.2474 98.4236)"
-                                            class="st13 st10 st11">10</text>
-                                    </g>
-                                    <g transform="translate(398.8211975097656, 309.16302490234375)"
-                                        pointer-events="none">
-                                        <text transform="matrix(1 0 0 1 159.7433 108.8204)" class="st10 st11">FG</text>
-                                        <text transform="matrix(1 0 0 1 159.7433 108.8204)"
-                                            class="st14 st10 st11">FG</text>
-                                        <text transform="matrix(1 0 0 1 160.8819 132.2589)" class="st10 st11">10</text>
-                                        <text transform="matrix(1 0 0 1 160.8819 132.2589)"
-                                            class="st14 st10 st11">10</text>
-                                        <text transform="matrix(1 0 0 1 159.7433 108.8204)"
-                                            class="st13 st10 st11">FG</text>
-                                        <text transform="matrix(1 0 0 1 160.8819 132.2589)"
-                                            class="st13 st10 st11">10</text>
-                                    </g>
-                                    <g transform="translate(294.0576171875, 425.5147705078125)" pointer-events="none">
-                                        <text transform="matrix(1 0 0 1 128.2568 142.7743)" class="st10 st11">GP</text>
-                                        <text transform="matrix(1 0 0 1 128.2568 142.7743)"
-                                            class="st15 st10 st11">GP</text>
-                                        <text transform="matrix(1 0 0 1 136.0361 166.2118)" class="st10 st11">8</text>
-                                        <text transform="matrix(1 0 0 1 136.0361 166.2118)"
-                                            class="st15 st10 st11">8</text>
-                                        <text transform="matrix(1 0 0 1 128.2568 142.7743)"
-                                            class="st13 st10 st11">GP</text>
-                                        <text transform="matrix(1 0 0 1 136.0361 166.2118)"
-                                            class="st13 st10 st11">8</text>
-                                    </g>
-                                    <g transform="translate(328.8930969238281, 177.64743041992188)"
-                                        pointer-events="none">
-                                        <text transform="matrix(1 0 0 1 140.5424 70.4419)" class="st10 st11">FF</text>
-                                        <text transform="matrix(1 0 0 1 140.5424 70.4419)"
-                                            class="st16 st10 st11">FF</text>
-                                        <text transform="matrix(1 0 0 1 146.2016 93.8799)" class="st10 st11">7</text>
-                                        <text transform="matrix(1 0 0 1 146.2016 93.8799)"
-                                            class="st16 st10 st11">7</text>
-                                        <text transform="matrix(1 0 0 1 140.5424 70.4419)"
-                                            class="st13 st10 st11">FF</text>
-                                        <text transform="matrix(1 0 0 1 146.2016 93.8799)"
-                                            class="st13 st10 st11">7</text>
-                                    </g>
-                                    <g transform="translate(151.0268096923828, 361.8333740234375)"
-                                        pointer-events="none">
-                                        <text transform="matrix(1 0 0 1 70.5137 124.1901)"
-                                            class="st10 st11">S-PBP</text>
-                                        <text transform="matrix(1 0 0 1 70.5137 124.1901)"
-                                            class="st17 st10 st11">S-PBP</text>
-                                        <text transform="matrix(1 0 0 1 94.2979 147.6295)" class="st10 st11">4</text>
-                                        <text transform="matrix(1 0 0 1 94.2979 147.6295)"
-                                            class="st17 st10 st11">4</text>
-                                        <text transform="matrix(1 0 0 1 70.5137 124.1901)"
-                                            class="st13 st10 st11">S-PBP</text>
-                                        <text transform="matrix(1 0 0 1 94.2979 147.6295)"
-                                            class="st13 st10 st11">4</text>
-                                    </g>
-                                    <g transform="translate(133.2647247314453, 299.8896179199219)"
-                                        pointer-events="none">
-                                        <text transform="matrix(1 0 0 1 81.7812 106.1133)" class="st10 st11">SD</text>
-                                        <text transform="matrix(1 0 0 1 81.7812 106.1133)"
-                                            class="st18 st10 st11">SD</text>
-                                        <text transform="matrix(1 0 0 1 89.1142 129.5537)" class="st10 st11">3</text>
-                                        <text transform="matrix(1 0 0 1 89.1142 129.5537)"
-                                            class="st18 st10 st11">3</text>
-                                        <text transform="matrix(1 0 0 1 81.7812 106.1133)"
-                                            class="st13 st10 st11">SD</text>
-                                        <text transform="matrix(1 0 0 1 89.1142 129.5537)"
-                                            class="st13 st10 st11">3</text>
-                                    </g>
-                                    <g transform="translate(188.08383178710938, 402.9893493652344)"
-                                        pointer-events="none">
-                                        <text transform="matrix(1 0 0 1 92.3429 136.2001)" class="st10 st11">LAB</text>
-                                        <text transform="matrix(1 0 0 1 92.3429 136.2001)"
-                                            class="st19 st10 st11">LAB</text>
-                                        <text transform="matrix(1 0 0 1 105.111 159.6396)" class="st10 st11">2</text>
-                                        <text transform="matrix(1 0 0 1 105.111 159.6396)"
-                                            class="st19 st10 st11">2</text>
-                                        <text transform="matrix(1 0 0 1 92.3429 136.2001)"
-                                            class="st13 st10 st11">LAB</text>
-                                        <text transform="matrix(1 0 0 1 105.111 159.6396)"
-                                            class="st13 st10 st11">2</text>
-                                    </g>
-                                    <g transform="translate(212.196533203125, 416.91082763671875)"
-                                        pointer-events="none">
-                                        <text transform="matrix(1 0 0 1 102.571 140.261)" class="st10 st11">I4C</text>
-                                        <text transform="matrix(1 0 0 1 102.571 140.261)"
-                                            class="st20 st10 st11">I4C</text>
-                                        <text transform="matrix(1 0 0 1 112.1472 163.7005)" class="st10 st11">1</text>
-                                        <text transform="matrix(1 0 0 1 112.1472 163.7005)"
-                                            class="st20 st10 st11">1</text>
-                                        <text transform="matrix(1 0 0 1 102.571 140.261)"
-                                            class="st13 st10 st11">I4C</text>
-                                        <text transform="matrix(1 0 0 1 112.1472 163.7005)"
-                                            class="st13 st10 st11">1</text>
-                                    </g>
-                                </g>
-                            </g>
-                        </g>
-                        <g>
-                            <g transform="translate(0, 0)">
-                            </g>
-                        </g>
-                    </svg>
-
-                </div> -->
-
-                <!-- end of righthand box -->
-
             </div>
-
-
-
-
-
         </div>
     </div>
-
-
     </div>
-    <!-- <script>
-        var ctx = document.getElementById('myChartmain').getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['SF', 'FG', 'FF', 'LAB', 'SD', 'GP', 'S-PBP', 'IND'],
-                datasets: [{
-                    label: 'Percent of First Preference Votes',
-                    data: [29.81, 18.76, 14.38, 11.35, 8.70, 7.04, 2.98, 5.61],
-                    backgroundColor: [
-                        'rgba(09, 53, 05, 1)',
-                        'rgba(06, 02, 197, 1)',
-                        'rgba(26, 151, 22, 1)',
-                        'rgba(255, 0, 0, 1)',
-                        'rgba(97, 1, 187, 1)',
-                        'rgba(83, 151, 77, 1)',
-                        'rgba(110, 46, 9, 1)',
-                        'rgba(128, 128, 128, 1)'
-                    ],
-                    borderColor: [
-                        'rgba(0, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-    </script> -->
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.js"
         integrity="sha512-aWx9jeVTj8X49UzUnUHGIlo6rNne1xNsCny/lL0QwUTQK2eilrHXpSk9xbRm4FJ4eLi2XBmnFlRkWPoChSx8bA=="
         crossorigin="anonymous"></script>
-
     <script src="tables.js"></script>
     <script src="script.js"></script>
-    <script src="direct_map.js"></script>
-
 </body>
 
 </html>
