--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
             <li>
                 <form class="button-form" action="tester.html" method="get">
-                    <button class="btn-style nav-link">Breakdown<span class="sr-only"></span></button>
+                    <button class="btn-style nav-link">BREAKDOWN<span class="sr-only"></span></button>
                 </form>
             </li>
         </ul>
