Add constituency paragraph text

--- a/tester.html
+++ b/tester.html
@@ -86,13 +86,12 @@
                             </div>
                             <p>Dublin Fingal</p>
                         </div>
-                        <p class="const-para-text">This is my fingal text paragraph please see here for infor re:Fingal!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique.
-                            Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit
-                            amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                        <p class="const-para-text"> Dublin Fingal is a parliamentary constituency which is represented
+                            in Dáil Éireann, the lower house of the Irish parliament or Oireachtas, from the 2016
+                            general election onwards. The constituency elects 5 deputies (Teachtaí Dála, commonly known
+                            as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV). </p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
@@ -189,12 +188,10 @@
                             <p>Dublin Bay North</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin Bay North text paragraph please see here for infor re:DBN!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae
-                            proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
-                            placerat in egestas.
+                            Dublin Bay North is a parliamentary constituency that has been represented in Dáil Éireann,
+                            the lower house of the Irish parliament or Oireachtas, from the 2016 general election.
+                            The constituency elects 5 deputies (Teachtaí Dála, commonly known as TDs). The method of
+                            election is the single transferable vote form of proportional representation (PR-STV).
                         </p>
                         <span class="const-section-bottom">
                             <div>
@@ -295,12 +292,11 @@
                             <p class="const-title">Dublin Bay South</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin Bay South text paragraph please see here for infor re:DBS!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae
-                            proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
-                            placerat in egestas. Habitant morbi tristique senectus et netus et.
+                            Dublin Bay South is a parliamentary constituency that has been represented in Dáil Éireann,
+                            the lower house of the Irish parliament or Oireachtas, since the 2016 general election. The
+                            constituency elects 4 deputies (Teachtaí Dála, commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV).
                         </p>
                         <span class="const-section-bottom">
                             <div>
@@ -392,11 +388,11 @@
                             <p>Dublin Central</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin Central text paragraph please see here for infor re:DC!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                            Dublin Central is a parliamentary constituency represented in Dáil Éireann, the lower house
+                            of the Irish parliament or Oireachtas. The constituency elects 4 deputies (Teachtaí Dála,
+                            commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV). </p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
@@ -496,11 +492,11 @@
                             <p>Dublin Mid West</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin MW text paragraph please see here for infor re:DMW!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et.</p>
+                            Dublin Mid-West is a parliamentary constituency represented in Dáil Éireann, the lower house
+                            of the Irish parliament or Oireachtas. The constituency elects 4 deputies (Teachtaí Dála,
+                            commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV).</p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
@@ -584,11 +580,11 @@
                             <p class="bigger-title">Dublin North West</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin NW text paragraph please see here for infor re:DNW!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                            Dublin North-West is a parliamentary constituency represented in Dáil Éireann, the lower
+                            house of the Irish parliament or Oireachtas. The constituency elects 3 deputies (Teachtaí
+                            Dála, commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV). </p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
@@ -678,11 +674,11 @@
                             <p>Dublin Rathdown</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin Rathdown text paragraph please see here for infor re:DRD!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                            Dublin Rathdown is a parliamentary constituency represented in Dáil Éireann, the lower house
+                            of the Irish parliament or Oireachtas, since the 2016 general election. The constituency
+                            elects three deputies (Teachtaí Dála, commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV). </p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
@@ -766,10 +762,11 @@
                             <p class="biggest-title">Dublin South Central</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin South Central text paragraph please see here for infor re:DSC!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. </p>
+                            Dublin South-Central is a parliamentary constituency represented in Dáil Éireann, the lower
+                            house of the Irish parliament or Oireachtas. The constituency elects 4 deputies (Teachtaí
+                            Dála, commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV).</p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
@@ -863,11 +860,11 @@
                             <p class="bigger-title">Dublin South West</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin South West text paragraph please see here for infor re:DSW!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                            Dublin South-West is a parliamentary constituency represented in Dáil Éireann, the lower
+                            house of the Irish parliament or Oireachtas. The constituency elects 5 deputies (Teachtaí
+                            Dála, commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV). </p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
@@ -955,11 +952,11 @@
                             <p>Dublin <br> West</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dublin West text paragraph please see here for infor re:DW!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                            Dublin West is a parliamentary constituency represented in Dáil Éireann, the lower house of
+                            the Irish parliament or Oireachtas. The constituency elects 4 deputies (Teachtaí Dála,
+                            commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV). </p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
@@ -1049,14 +1046,14 @@
                     <div class="item dl" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
-                            <p>Dun Laoighaire</p>
+                            <p>Dún Laoghaire</p>
                         </div>
                         <p class="const-para-text">
-                            This is my Dún Laoghaire text paragraph please see here for infor re:DL!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. </p>
+                            Dún Laoghaire is a parliamentary constituency represented in Dáil Éireann, the lower house
+                            of the Irish parliament or Oireachtas. The constituency elects 4 deputies (Teachtaí Dála,
+                            commonly known as TDs).
+                            The method of election is the single transferable vote form of proportional representation
+                            (PR-STV). </p>
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-js-trial">
