Add footer text

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
         </div>
     </div>
     </div>
+    <footer> Created by Stephen Ray 2021</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.js"
         integrity="sha512-aWx9jeVTj8X49UzUnUHGIlo6rNne1xNsCny/lL0QwUTQK2eilrHXpSk9xbRm4FJ4eLi2XBmnFlRkWPoChSx8bA=="
         crossorigin="anonymous"></script>
