--- a/tester.html
+++ b/tester.html
@@ -1146,6 +1146,7 @@
         </div>
         <!-- END BG DIV -->
     </div>
+    <footer class="page2-footer"> Created by Stephen Ray 2021</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.js"
         integrity="sha512-aWx9jeVTj8X49UzUnUHGIlo6rNne1xNsCny/lL0QwUTQK2eilrHXpSk9xbRm4FJ4eLi2XBmnFlRkWPoChSx8bA=="
         crossorigin="anonymous"></script>
